remove sections, added images/bckgd to "rooms"

--- a/components/sass/modules/_victoria.scss
+++ b/components/sass/modules/_victoria.scss
@@ -1,10 +1,10 @@
-#westminster {
+#victoria {
 @include span(12);
 overflow: hidden;
   padding: 0;
   @include clearfix;
   z-index: 1;
-     @include backImage('../images/union/webster.jpg');
+     @include backImage('../images/union/barrister.jpg');
   .lgpic{
     position: absolute;
   }
