--- a/components/sass/modules/_cambridge.scss
+++ b/components/sass/modules/_cambridge.scss
@@ -1,10 +1,10 @@
-#westminster {
+#cambridge {
 @include span(12);
 overflow: hidden;
   padding: 0;
   @include clearfix;
   z-index: 1;
-     @include backImage('../images/union/webster.jpg');
+     @include backImage('../images/union/bowstreet.jpg');
   .lgpic{
     position: absolute;
   }
