--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -23,11 +23,11 @@
 //Import Modules
 @import "modules/intro";
 @import "modules/nav";
-@import "modules/welcome";
-@import "modules/events";
-@import "modules/dining";
-@import "modules/hotelinfo";
-@import "modules/rooms";
+@import "modules/westminster";
+@import "modules/picadilly";
+@import "modules/cambridge";
+@import "modules/oxford";
+@import "modules/victoria";
 @import "modules/attractions";
 @import "modules/footer";
 
