fluff page updates

--- a/components/sass/modules/_attractions.scss
+++ b/components/sass/modules/_attractions.scss
@@ -4,7 +4,7 @@ overflow: hidden;
   padding: 0;
   @include clearfix;
   z-index: 1;
-     @include backImage('../images/union/fluffcrowd.png');
+     @include backImage('../images/union/webster.jpg');
   .lgpic{
   	position: absolute;
   }
