--- a/components/sass/modules/_westminster.scss
+++ b/components/sass/modules/_westminster.scss
@@ -4,8 +4,8 @@ overflow: hidden;
   padding: 0;
   @include clearfix;
   z-index: 1;
-     @include backImage('../images/union/webster.jpg');
-  .lgpic{
+  @include backImage('../images/union/fluffcrowd.jpg');
+  .lgpic, .lgpic2, .lgpic3, .lgpic4, .lgpic5{
     position: absolute;
   }
 
