--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -353,7 +353,7 @@ header #nav .navbar ul li a.active {
   overflow: hidden;
   padding: 0;
   z-index: 1;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/webster.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/fluffcrowd.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-background-size: cover;
@@ -371,7 +371,7 @@ header #nav .navbar ul li a.active {
   clear: both;
 }
 /* line 8, ../../../components/sass/modules/_westminster.scss */
-#westminster .lgpic {
+#westminster .lgpic, #westminster .lgpic2, #westminster .lgpic3, #westminster .lgpic4, #westminster .lgpic5 {
   position: absolute;
 }
 
@@ -513,7 +513,7 @@ header #nav .navbar ul li a.active {
   overflow: hidden;
   padding: 0;
   z-index: 1;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/fluffcrowd.png");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/webster.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-background-size: cover;
