--- a/components/sass/modules/_victoria.scss
+++ b/components/sass/modules/_victoria.scss
@@ -1,14 +1,19 @@
 #victoria {
 @include span(12);
+@include display-flex();
 overflow: hidden;
   padding: 0;
   @include clearfix;
   z-index: 1;
      @include backImage('../images/union/barrister.jpg');
-  .lgpic{
+  .lgpic, .lgpic2, .lgpic3, .lgpic4, .lgpic5, .smpic{
     position: absolute;
   }
+  .bldgpic1, .bldgpic2, .bldgpic3{
+    position: absolute;
+    
 
+  }
 }
 
 
