--- a/components/sass/modules/_picadilly.scss
+++ b/components/sass/modules/_picadilly.scss
@@ -8,7 +8,12 @@ overflow: hidden;
   .lgpic{
     position: absolute;
   }
-
+	.spacer{
+		@include display-flex();
+		@include align-items(center);
+		@include justify-content(center);  
+	}
+	 #spacer1 { @include backImage('../images/union/skylineParallax2.jpg');}
 }
 
 
