--- a/components/sass/modules/_westminster.scss
+++ b/components/sass/modules/_westminster.scss
@@ -1,14 +1,15 @@
 #westminster {
-@include span(12);
-overflow: hidden;
-  padding: 0;
-  @include clearfix;
-  z-index: 1;
-  @include backImage('../images/union/fluffcrowd.jpg');
-  .lgpic, .lgpic2, .lgpic3, .lgpic4, .lgpic5{
-    position: absolute;
-  }
-
+	@include span(12);
+	@include display-flex();
+	overflow: hidden;
+	padding: 0;
+	@include clearfix;
+	z-index: 1;
+	@include backImage('../images/union/fluffcrowd.jpg');
+	.lgpic, .lgpic2, .lgpic3, .lgpic4, .lgpic5, .smpic{
+	position: absolute;
+	}
+  
 }
 
 
