--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -114,12 +114,32 @@ body {
 }
 /* line 14, ../../../components/sass/_layout.scss */
 .scene .spacer {
-  height: 40%;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
-/* line 17, ../../../components/sass/_layout.scss */
-.scene .bldgpic {
-  position: absolute;
-  width: 25%;
+/* line 19, ../../../components/sass/_layout.scss */
+.scene #spacer1 {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/skylineParallax2.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+/* line 20, ../../../components/sass/_layout.scss */
+.scene #spacer2 {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/skylineParallax3.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 /* line 22, ../../../components/sass/_layout.scss */
 .scene article {
@@ -417,25 +437,6 @@ header #nav .navbar ul li a.active {
 #picadilly .lgpic {
   position: absolute;
 }
-/* line 11, ../../../components/sass/modules/_picadilly.scss */
-#picadilly .spacer {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-/* line 16, ../../../components/sass/modules/_picadilly.scss */
-#picadilly #spacer1 {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/skylineParallax2.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 
 /* line 1, ../../../components/sass/modules/_oxford.scss */
 #oxford {
@@ -468,25 +469,6 @@ header #nav .navbar ul li a.active {
 #oxford .lgpic {
   position: absolute;
 }
-/* line 11, ../../../components/sass/modules/_oxford.scss */
-#oxford .spacer {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-/* line 16, ../../../components/sass/modules/_oxford.scss */
-#oxford #spacer2 {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/skylineParallax3.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 
 /* line 1, ../../../components/sass/modules/_victoria.scss */
 #victoria {
@@ -517,13 +499,10 @@ header #nav .navbar ul li a.active {
 #victoria:after {
   clear: both;
 }
-/* line 9, ../../../components/sass/modules/_victoria.scss */
-#victoria .lgpic, #victoria .lgpic2, #victoria .lgpic3, #victoria .lgpic4, #victoria .lgpic5, #victoria .smpic {
+/* line 10, ../../../components/sass/modules/_victoria.scss */
+#victoria .bldgpic1, #victoria .bldgpic2, #victoria .bldgpic3, #victoria .bldgpic4 {
   position: absolute;
-}
-/* line 12, ../../../components/sass/modules/_victoria.scss */
-#victoria .bldgpic1, #victoria .bldgpic2, #victoria .bldgpic3 {
-  position: absolute;
+  width: 25%;
 }
 
 /* line 1, ../../../components/sass/modules/_attractions.scss */
