--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -23,10 +23,11 @@
 //Import Modules
 @import "modules/intro";
 @import "modules/nav";
-@import "modules/westminster";
-@import "modules/picadilly";
-@import "modules/oxford";
-@import "modules/victoria";
+@import "modules/community";
+@import "modules/housing";
+@import "modules/maps";
+@import "modules/business";
 @import "modules/attractions";
 @import "modules/footer";
+@import "modules/spacer";
 
