--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -106,42 +106,13 @@ body {
 /* line 7, ../../../components/sass/_layout.scss */
 .scene {
   position: relative;
-  padding: 20px 0;
+  padding: 0;
 }
 /* line 11, ../../../components/sass/_layout.scss */
 .scene .pic {
   margin: 0;
 }
-/* line 16, ../../../components/sass/_layout.scss */
-.scene .spacer {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-/* line 20, ../../../components/sass/_layout.scss */
-.scene .spacer #spacer1 {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/skylineParallax2.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-/* line 21, ../../../components/sass/_layout.scss */
-.scene .spacer #spacer2 {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/skylineParallax3.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-/* line 24, ../../../components/sass/_layout.scss */
+/* line 14, ../../../components/sass/_layout.scss */
 .scene article {
   max-width: 95%;
   margin-left: auto;
@@ -160,7 +131,7 @@ body {
   }
 }
 @media (min-width: 960px) {
-  /* line 33, ../../../components/sass/_layout.scss */
+  /* line 23, ../../../components/sass/_layout.scss */
   .scene article {
     max-width: 60em;
     margin-left: auto;
@@ -176,7 +147,7 @@ body {
 
 /* line 2, ../../../components/sass/modules/_intro.scss */
 header .fullheight {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/bowstreet.png");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/muralLarge.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-background-size: cover;
@@ -280,31 +251,33 @@ header .fullheight .hgroup p img {
   text-align: center;
   display: inline-block;
   padding: 10px;
-  font-size: 1.5em;
+  font-size: 2em;
 }
 @media (max-width: 650px) {
   /* line 17, ../../../components/sass/modules/_nav.scss */
   #nav .navbar .brand a {
     font-size: 1.2em;
+    padding: 10px;
   }
-  /* line 27, ../../../components/sass/modules/_nav.scss */
+  /* line 28, ../../../components/sass/modules/_nav.scss */
   #nav .navbar .brand a span {
     display: none;
   }
 }
-/* line 32, ../../../components/sass/modules/_nav.scss */
+/* line 33, ../../../components/sass/modules/_nav.scss */
 #nav .navbar ul {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 66.66667%;
   float: left;
+  padding: 10px;
 }
-/* line 34, ../../../components/sass/modules/_nav.scss */
+/* line 36, ../../../components/sass/modules/_nav.scss */
 #nav .navbar ul li {
   float: left;
 }
-/* line 36, ../../../components/sass/modules/_nav.scss */
+/* line 38, ../../../components/sass/modules/_nav.scss */
 #nav .navbar ul li a {
   color: #e3e5e5;
   font: 200 1em/1.5em "Exo 2", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -316,64 +289,68 @@ header .fullheight .hgroup p img {
   background-repeat: no-repeat;
   background-position: 2px;
 }
-/* line 49, ../../../components/sass/modules/_nav.scss */
+/* line 51, ../../../components/sass/modules/_nav.scss */
 #nav .navbar ul li a.info {
   background-image: url("../images/icons/info.png");
 }
-/* line 50, ../../../components/sass/modules/_nav.scss */
+/* line 52, ../../../components/sass/modules/_nav.scss */
 #nav .navbar ul li a.community {
   background-image: url("../images/icons/community.png");
 }
-/* line 51, ../../../components/sass/modules/_nav.scss */
-#nav .navbar ul li a.dining {
-  background-image: url("../images/icons/dining.png");
+/* line 53, ../../../components/sass/modules/_nav.scss */
+#nav .navbar ul li a.business {
+  background-image: url("../images/icons/business.png");
 }
-/* line 52, ../../../components/sass/modules/_nav.scss */
+/* line 54, ../../../components/sass/modules/_nav.scss */
+#nav .navbar ul li a.housing {
+  background-image: url("../images/icons/housing.png");
+}
+/* line 55, ../../../components/sass/modules/_nav.scss */
 #nav .navbar ul li a.events {
   background-image: url("../images/icons/events.png");
 }
-/* line 53, ../../../components/sass/modules/_nav.scss */
-#nav .navbar ul li a.attractions {
-  background-image: url("../images/icons/attractions.png");
+/* line 56, ../../../components/sass/modules/_nav.scss */
+#nav .navbar ul li a.maps {
+  background-image: url("../images/icons/map.png");
 }
-/* line 55, ../../../components/sass/modules/_nav.scss */
+/* line 58, ../../../components/sass/modules/_nav.scss */
 #nav .navbar ul li a:hover {
   background-color: #EFC94C;
   color: #063642;
 }
 @media (min-width: 0) and (max-width: 650px) {
-  /* line 36, ../../../components/sass/modules/_nav.scss */
+  /* line 38, ../../../components/sass/modules/_nav.scss */
   #nav .navbar ul li a {
     padding: 10px 18px;
   }
-  /* line 62, ../../../components/sass/modules/_nav.scss */
+  /* line 65, ../../../components/sass/modules/_nav.scss */
   #nav .navbar ul li a::after {
     content: '\000a0';
     display: block;
   }
-  /* line 66, ../../../components/sass/modules/_nav.scss */
+  /* line 69, ../../../components/sass/modules/_nav.scss */
   #nav .navbar ul li a span {
     display: none;
   }
 }
 @media (min-width: 650px) and (max-width: 960px) {
-  /* line 36, ../../../components/sass/modules/_nav.scss */
+  /* line 38, ../../../components/sass/modules/_nav.scss */
   #nav .navbar ul li a {
     padding-left: 10px;
   }
-  /* line 72, ../../../components/sass/modules/_nav.scss */
+  /* line 75, ../../../components/sass/modules/_nav.scss */
   #nav .navbar ul li a.icon {
     background-image: none;
   }
 }
-/* line 75, ../../../components/sass/modules/_nav.scss */
+/* line 78, ../../../components/sass/modules/_nav.scss */
 #nav .navbar ul li a.active {
   background-color: #DF4848;
   color: #e3e5e5;
 }
 
-/* line 1, ../../../components/sass/modules/_westminster.scss */
-#westminster {
+/* line 1, ../../../components/sass/modules/_community.scss */
+#community {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -393,26 +370,29 @@ header .fullheight .hgroup p img {
   background-size: cover;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-#westminster:before, #westminster:after {
+#community:before, #community:after {
   content: '';
   display: table;
 }
 /* line 27, ../../../components/sass/_mixins.scss */
-#westminster:after {
+#community:after {
   clear: both;
 }
-/* line 9, ../../../components/sass/modules/_westminster.scss */
-#westminster .lgpic, #westminster .lgpic2, #westminster .lgpic3, #westminster .lgpic4, #westminster .lgpic5, #westminster .smpic {
+/* line 9, ../../../components/sass/modules/_community.scss */
+#community .lgpic, #community .lgpic2, #community .lgpic3, #community .lgpic4, #community .lgpic5, #community .smpic {
   position: absolute;
 }
 
-/* line 1, ../../../components/sass/modules/_picadilly.scss */
-#picadilly {
+/* line 1, ../../../components/sass/modules/_housing.scss */
+#housing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   float: left;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   overflow: hidden;
   padding: 0;
   z-index: 1;
@@ -424,22 +404,28 @@ header .fullheight .hgroup p img {
   -o-background-size: cover;
   background-size: cover;
 }
+/* line 12, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
+#housing:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
 /* line 22, ../../../components/sass/_mixins.scss */
-#picadilly:before, #picadilly:after {
+#housing:before, #housing:after {
   content: '';
   display: table;
 }
 /* line 27, ../../../components/sass/_mixins.scss */
-#picadilly:after {
+#housing:after {
   clear: both;
 }
-/* line 8, ../../../components/sass/modules/_picadilly.scss */
-#picadilly .lgpic {
+/* line 9, ../../../components/sass/modules/_housing.scss */
+#housing .lgpic {
   position: absolute;
 }
 
-/* line 1, ../../../components/sass/modules/_oxford.scss */
-#oxford {
+/* line 1, ../../../components/sass/modules/_maps.scss */
+#maps {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -457,21 +443,21 @@ header .fullheight .hgroup p img {
   background-size: cover;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-#oxford:before, #oxford:after {
+#maps:before, #maps:after {
   content: '';
   display: table;
 }
 /* line 27, ../../../components/sass/_mixins.scss */
-#oxford:after {
+#maps:after {
   clear: both;
 }
-/* line 8, ../../../components/sass/modules/_oxford.scss */
-#oxford .lgpic {
+/* line 8, ../../../components/sass/modules/_maps.scss */
+#maps .lgpic {
   position: absolute;
 }
 
-/* line 1, ../../../components/sass/modules/_victoria.scss */
-#victoria {
+/* line 1, ../../../components/sass/modules/_business.scss */
+#business {
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -494,30 +480,27 @@ header .fullheight .hgroup p img {
   background-size: cover;
 }
 /* line 12, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
-#victoria:after {
+#business:after {
   content: " ";
   display: block;
   clear: both;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-#victoria:before, #victoria:after {
+#business:before, #business:after {
   content: '';
   display: table;
 }
 /* line 27, ../../../components/sass/_mixins.scss */
-#victoria:after {
+#business:after {
   clear: both;
 }
-/* line 10, ../../../components/sass/modules/_victoria.scss */
-#victoria .colorpic {
+/* line 11, ../../../components/sass/modules/_business.scss */
+#business .bldgpic1, #business .bldgpic2, #business .bldgpic3, #business .bldgpic4 {
   position: absolute;
-  width: 100%;
-}
-/* line 15, ../../../components/sass/modules/_victoria.scss */
-#victoria .bldgpic1, #victoria .bldgpic2, #victoria .bldgpic3, #victoria .bldgpic4 {
-  position: absolute;
-  width: 25vw;
-  height: auto;
+  height: 100%;
+  Width: auto;
+  overflow: hidden;
+  vertical-align: bottom;
 }
 
 /* line 1, ../../../components/sass/modules/_attractions.scss */
@@ -585,4 +568,31 @@ footer #socialmedia ul li img {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
+}
+
+/* line 1, ../../../components/sass/modules/_spacer.scss */
+.spacer {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding: 0;
+}
+/* line 22, ../../../components/sass/_mixins.scss */
+.spacer:before, .spacer:after {
+  content: '';
+  display: table;
+}
+/* line 27, ../../../components/sass/_mixins.scss */
+.spacer:after {
+  clear: both;
+}
+
+/* line 7, ../../../components/sass/modules/_spacer.scss */
+.spacerpic {
+  width: 100%;
+  height: 10%;
+  padding: 0;
+  vertical-align: bottom;
 }
