--- a/components/sass/modules/_business.scss
+++ b/components/sass/modules/_business.scss
@@ -7,14 +7,18 @@
 	@include clearfix;
 	z-index: 1;
 	 @include backImage('../images/union/barrister.jpg');
+
 	
-	.bldgpic1, .bldgpic2, .bldgpic3, .bldgpic4 {
+	.bldgpic1, .bldgpic2, .bldgpic3, .bldgpic4,.colorpic2 {
 		position: absolute;
 		height: 100%;
 		Width: auto;
 		overflow: hidden;
 		vertical-align:bottom;
 	}//bldgpic
+
+
+
 	
 	
 }//business
