--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -107,12 +107,13 @@ body {
 .scene {
   position: relative;
   padding: 0;
+  background-repeat: no-repeat;
 }
-/* line 11, ../../../components/sass/_layout.scss */
+/* line 12, ../../../components/sass/_layout.scss */
 .scene .pic {
   margin: 0;
 }
-/* line 14, ../../../components/sass/_layout.scss */
+/* line 15, ../../../components/sass/_layout.scss */
 .scene article {
   max-width: 95%;
   margin-left: auto;
@@ -131,7 +132,7 @@ body {
   }
 }
 @media (min-width: 960px) {
-  /* line 23, ../../../components/sass/_layout.scss */
+  /* line 24, ../../../components/sass/_layout.scss */
   .scene article {
     max-width: 60em;
     margin-left: auto;
@@ -147,13 +148,7 @@ body {
 
 /* line 2, ../../../components/sass/modules/_intro.scss */
 header .fullheight {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/muralLarge.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-image: url("../images/union/muralLarge.jpg");
   display: -webkit-flex;
   display: flex;
   -webkit-align-items: center;
@@ -161,11 +156,11 @@ header .fullheight {
   -webkit-justify-content: center;
   justify-content: center;
 }
-/* line 9, ../../../components/sass/modules/_intro.scss */
+/* line 11, ../../../components/sass/modules/_intro.scss */
 header .fullheight .hgroup {
   padding: 100px 0;
 }
-/* line 12, ../../../components/sass/modules/_intro.scss */
+/* line 14, ../../../components/sass/modules/_intro.scss */
 header .fullheight .hgroup h1 {
   color: #e3e5e5;
   font-size: 5em;
@@ -174,7 +169,7 @@ header .fullheight .hgroup h1 {
   text-shadow: #000000 0 0 20px;
   text-align: center;
 }
-/* line 21, ../../../components/sass/modules/_intro.scss */
+/* line 23, ../../../components/sass/modules/_intro.scss */
 header .fullheight .hgroup h2 {
   display: block;
   color: #e3e5e5;
@@ -188,11 +183,11 @@ header .fullheight .hgroup h2 {
   background: rgba(0, 0, 0, 0.5);
   font-size: 1.3em;
 }
-/* line 35, ../../../components/sass/modules/_intro.scss */
+/* line 37, ../../../components/sass/modules/_intro.scss */
 header .fullheight .hgroup p {
   text-align: center;
 }
-/* line 37, ../../../components/sass/modules/_intro.scss */
+/* line 39, ../../../components/sass/modules/_intro.scss */
 header .fullheight .hgroup p img {
   padding-top: 50px;
   max-width: 50px;
@@ -209,12 +204,12 @@ header .fullheight .hgroup p img {
   width: 100%;
   z-index: 100;
 }
-/* line 22, ../../../components/sass/_mixins.scss */
+/* line 3, ../../../components/sass/_mixins.scss */
 #nav:before, #nav:after {
   content: '';
   display: table;
 }
-/* line 27, ../../../components/sass/_mixins.scss */
+/* line 8, ../../../components/sass/_mixins.scss */
 #nav:after {
   clear: both;
 }
@@ -361,67 +356,38 @@ header .fullheight .hgroup p img {
   overflow: hidden;
   padding: 0;
   z-index: 1;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/fluffcrowd.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-image: url(../images/union/fluffcrowd.jpg);
+  background-size: 100% auto;
 }
-/* line 22, ../../../components/sass/_mixins.scss */
+/* line 3, ../../../components/sass/_mixins.scss */
 #community:before, #community:after {
   content: '';
   display: table;
 }
-/* line 27, ../../../components/sass/_mixins.scss */
+/* line 8, ../../../components/sass/_mixins.scss */
 #community:after {
   clear: both;
 }
-/* line 10, ../../../components/sass/modules/_community.scss */
+/* line 12, ../../../components/sass/modules/_community.scss */
 #community .lgpic, #community .lgpic2, #community .lgpic3, #community .lgpic4, #community .lgpic5, #community .smpic {
   position: absolute;
 }
 
 /* line 1, ../../../components/sass/modules/_housing.scss */
 #housing {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-  float: left;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
   overflow: hidden;
-  padding: 0;
-  z-index: 1;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/unionsquarecafe.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-/* line 12, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
-#housing:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-/* line 22, ../../../components/sass/_mixins.scss */
-#housing:before, #housing:after {
-  content: '';
-  display: table;
-}
-/* line 27, ../../../components/sass/_mixins.scss */
-#housing:after {
-  clear: both;
+  height: 100vh;
+  background-image: url(/images/union/muralLarge.jpg);
+  background-size: 100% auto;
 }
 /* line 9, ../../../components/sass/modules/_housing.scss */
-#housing .lgpic {
-  position: absolute;
+#housing #housing > div {
+  position: relative;
+  height: 200%;
+  -webkit-transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 /* line 1, ../../../components/sass/modules/_maps.scss */
@@ -431,36 +397,24 @@ header .fullheight .hgroup p img {
   box-sizing: border-box;
   width: 100%;
   float: left;
+  position: relative;
   overflow: hidden;
+  height: 100vh;
   padding: 0;
-  z-index: 1;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/murallarge.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-image: url(/images/union/unionsquarecafe.jpg);
+  background-size: 100% auto;
 }
-/* line 22, ../../../components/sass/_mixins.scss */
-#maps:before, #maps:after {
-  content: '';
-  display: table;
-}
-/* line 27, ../../../components/sass/_mixins.scss */
-#maps:after {
-  clear: both;
-}
-/* line 8, ../../../components/sass/modules/_maps.scss */
-#maps .lgpic {
-  position: absolute;
+/* line 11, ../../../components/sass/modules/_maps.scss */
+#maps #maps > div {
+  position: relative;
+  height: 200%;
+  -webkit-transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 /* line 1, ../../../components/sass/modules/_business.scss */
 #business {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -471,36 +425,24 @@ header .fullheight .hgroup p img {
   overflow: hidden;
   padding: 0;
   z-index: 1;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/barrister.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-image: url(../images/union/barrister.jpg);
+  background-size: 100% auto;
 }
-/* line 12, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
-#business:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-/* line 22, ../../../components/sass/_mixins.scss */
+/* line 3, ../../../components/sass/_mixins.scss */
 #business:before, #business:after {
   content: '';
   display: table;
 }
-/* line 27, ../../../components/sass/_mixins.scss */
+/* line 8, ../../../components/sass/_mixins.scss */
 #business:after {
   clear: both;
 }
-/* line 12, ../../../components/sass/modules/_business.scss */
+/* line 11, ../../../components/sass/modules/_business.scss */
 #business .bldgpic1, #business .bldgpic2, #business .bldgpic3, #business .bldgpic4, #business .colorpic2 {
   position: absolute;
   height: 100%;
-  Width: auto;
+  width: auto;
   overflow: hidden;
-  vertical-align: bottom;
 }
 
 /* line 1, ../../../components/sass/modules/_attractions.scss */
@@ -513,24 +455,19 @@ header .fullheight .hgroup p img {
   overflow: hidden;
   padding: 0;
   z-index: 1;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/union/webster.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-image: url(../images/union/webster.jpg);
+  background-size: 100% auto;
 }
-/* line 22, ../../../components/sass/_mixins.scss */
+/* line 3, ../../../components/sass/_mixins.scss */
 #attractions:before, #attractions:after {
   content: '';
   display: table;
 }
-/* line 27, ../../../components/sass/_mixins.scss */
+/* line 8, ../../../components/sass/_mixins.scss */
 #attractions:after {
   clear: both;
 }
-/* line 8, ../../../components/sass/modules/_attractions.scss */
+/* line 9, ../../../components/sass/modules/_attractions.scss */
 #attractions .lgpic {
   position: absolute;
 }
@@ -578,18 +515,10 @@ footer #socialmedia ul li img {
   width: 100%;
   float: left;
   padding: 0;
-}
-/* line 22, ../../../components/sass/_mixins.scss */
-.spacer:before, .spacer:after {
-  content: '';
-  display: table;
-}
-/* line 27, ../../../components/sass/_mixins.scss */
-.spacer:after {
-  clear: both;
+  position: relative;
 }
 
-/* line 7, ../../../components/sass/modules/_spacer.scss */
+/* line 8, ../../../components/sass/modules/_spacer.scss */
 .spacerpic {
   width: 100%;
   height: 10%;
