--- a/components/sass/modules/_attractions.scss
+++ b/components/sass/modules/_attractions.scss
@@ -4,7 +4,8 @@ overflow: hidden;
   padding: 0;
   @include clearfix;
   z-index: 1;
-     @include backImage('../images/union/webster.jpg');
+     background-image: url(../images/union/webster.jpg);
+     background-size: 100% auto;
   .lgpic{
   	position: absolute;
   }
