--- a/components/sass/modules/_housing.scss
+++ b/components/sass/modules/_housing.scss
@@ -1,14 +1,18 @@
 #housing {
-	@include span(12);
-	@include container(100%);
+	position: relative;
 	overflow: hidden;
-	  padding: 0;
-	  @include clearfix;
-	  z-index: 1;
-	     @include backImage('../images/union/unionsquarecafe.jpg');
-	  .lgpic{
-	    position: absolute;
-	  }//lgpic	
+	height: 100vh;
+
+    background-image: url(/images/union/muralLarge.jpg);
+    background-size: 100% auto;
+
+  	> div{
+		position: relative;
+		height: 200%;
+		-webkit-transform: translateZ(0);-webkit-backface-visibility: hidden;-webkit-perspective: 1000;
+	}//housing > div
+
+
 }//housing
 
 
