--- a/components/sass/modules/_intro.scss
+++ b/components/sass/modules/_intro.scss
@@ -1,6 +1,8 @@
 header {
   .fullheight {
-    @include backImage('../images/union/muralLarge.jpg');
+
+    background-image:url('../images/union/muralLarge.jpg');
+
 
     @include display-flex();
     @include align-items(center);
